# napi-rs-revm

./: .gitattributes  .gitignore  Cargo.toml  README.md  index.d.ts  index.js  no_prefetch_benchmark_results.csv  package.json  pnpm-lock.yaml  prefetch_benchmark_results.csv
__test__/: index.spec.ts
benchmark/: bench.ts
contracts/: Avg_Unit_Test.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/napi/: Cargo.toml  index.d.ts  index.js
crates/napi/src/: lib.rs
