[workspace]
members = ["crates/core", "crates/cli", "crates/napi"]
resolver = "2"

[workspace.package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
serde_json = "1.0"
serde = "1.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
rpath = true
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
debug = "full"
