[package]
name = "napi-rs-revm-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "execute_test"
path = "src/main.rs"

[dependencies]
napi-rs-revm-core = { path = "../core" }
eyre = "0.6.12"
clap = { version = "4.5", features = ["derive"] }
tokio.workspace = true
