[package]
name = "napi-rs-revm"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["async", "error_anyhow", "napi8", "serde-json"] }
napi-derive = "3.0.0"
napi-rs-revm-core = { path = "../core" }
tokio.workspace = true

[build-dependencies]
napi-build = "2"
